人工介入增强，支持多tool的人工介入